# assessment-platform

./: .env.example  .gitignore  CLAUDE.md  CONVENTIONS.md  PRODUCT_BACKLOG.md  README.md  ROADMAP.md  STATUS.md  alembic.ini  pyproject.toml
.claude/: settings.json
.github/workflows/: checks.yml  e2e.yml
alembic/: README  env.py
alembic/versions/: 15556d728532_assessment_and_assessment_question_.py  330f96008258_invite_deliveries_audit_trail.py  3c8072a71f16_question_reference_solution_and_.py  40b262e3d6b5_question_difficulty_and_status.py  4134ffc10adb_unique_submission_per_invite_and_.py  ad5e81ec2b2b_submission_unique_per_invite_candidate_.py  cae37faa2bff_initial_schema.py  f21c8592dee0_question_duration_minutes_and_candidate_.py
assessment_platform/: __init__.py  agent_client.py  api.py  auth.py  config.py  db.py  email_client.py  models.py  question_rules.py  ratelimit.py  schemas.py  signing.py
contract/: callback_contract.py
scripts/: check_question_cases.py  checkpoints.sh  dev.sh  install-hooks.sh  smoke_e2e.py
tests/: conftest.py  test_api.py  test_assessments.py  test_contract.py  test_logging_redaction.py  test_metadata.py  test_question_floor.py  test_signing.py  test_slice1.py  test_slice11.py  test_slice12.py  test_slice2.py  test_slice9.py  test_timer.py
web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: candidate-run.spec.ts  draft-with-ai.spec.ts  helpers.ts  interviewer-candidate-flow.spec.ts  invite-lifecycle.spec.ts  mock-agent.mjs  submission-report.spec.ts
(+47 files in other folders)
