[project]
name = "assessment-platform"
version = "0.1.0"
description = "Assessment Platform - the stateful system of record for coding questions, candidate submissions, and the assessment results returned by the (stateless) Assessment Agent."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.139.0",
    "sqlmodel>=0.0.22",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.51.0",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "email-validator>=2",
    "alembic>=1.13",
]

[project.scripts]
platform-api = "assessment_platform.api:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assessment_platform"]

[tool.ruff]
line-length = 100
target-version = "py310"
# Alembic autogenerates migration files from its own template (typing.Sequence /
# Union imports, etc.); don't lint generated migrations.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
# pyflakes(F), pycodestyle(E), isort(I), pep8-naming(N), bugbear(B), pyupgrade(UP).
select = ["E", "F", "I", "N", "B", "UP"]
# E501: line length is the formatter's job. B008: FastAPI's `Depends()` in
# argument defaults is the framework's intended idiom, not a real bug.
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
files = ["assessment_platform"]
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
